--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,18 @@
+# @Author: Manuel Rodriguez <valle>
+# @Date:   27-Jun-2017
+# @Email:  valle.mrv@gmail.com
+# @Filename: .gitmodules
+# @Last modified by:   valle
+# @Last modified time: 19-Jul-2017
+# @License: Apache license vesion 2.0
+
+
 [submodule "python-ormsqlite"]
 	path = python-ormsqlite
 	url = https://github.com/vallemrv/python-ormsqlite.git
 [submodule "django-tokenapi"]
 	path = django-tokenapi
-	url = https://github.com/jpulgarin/django-tokenapi.git
+	url = https://github.com/vallemrv/django-tokenapi.git
+[submodule "django-themagicapi"]
+	path = django-tokenapi
+	url = https://github.com/vallemrv/django-themagicapi.git
